@@ -4,6 +4,29 @@
 #define __USB_CONF_H
 
 #define NUM_STRING_DESC 7
+#define ICC_NUM_INTERFACES 1
+#define ICC_INTERFACE 0
+#ifdef HID_CARD_CHANGE_SUPPORT
+#define HID_NUM_INTERFACES 1
+#define HID_INTERFACE 1
+#else
+#define HID_NUM_INTERFACES 0
+#endif
+#ifdef ENABLE_VIRTUAL_COM_PORT
+#define VCOM_NUM_INTERFACES 2
+#define VCOM_INTERFACE_0 (ICC_NUM_INTERFACES + HID_NUM_INTERFACES)
+#define VCOM_INTERFACE_1 (ICC_NUM_INTERFACES + HID_NUM_INTERFACES + 1)
+#else
+#define VCOM_NUM_INTERFACES 0
+#endif
+#ifdef PINPAD_DND_SUPPORT
+#define MSC_NUM_INTERFACES 1
+#define MSC_INTERFACE (ICC_NUM_INTERFACES + HID_NUM_INTERFACES + VCOM_NUM_INTERFACES)
+#else
+#define MSC_NUM_INTERFACES 0
+#endif
+#define NUM_INTERFACES (ICC_NUM_INTERFACES + HID_NUM_INTERFACES \
+			+ VCOM_NUM_INTERFACES + MSC_NUM_INTERFACES)
 
 #if defined(USB_SELF_POWERED)
 #define USB_INITIAL_FEATURE 0xC0   /* bmAttributes: self powered */
